# auto-mods

./: .clang-format  .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  auto-mod.py  buildForDebugger.sh  create-data-mod.cpp  create-mods.sh  createDoubleMod.sh  createMods.sh  genieutils.patch  ids.h  patchGenieutils.sh  patches.cpp  patches.h  requirements.txt
.github/workflows/: ci.yml
docs/: build-instructions.md
mods/: auras.py  community_games.py  duplicate_techs.py  exploding_kings.py  exploding_relic_monks.py  exploding_villagers.py  flying_dutchman.py  heroes_and_villains.py  ids.py  kidnap.py  matryoshka.py  no_wall.py  nomadking.py  pocket_horse.py  random_cost.py  rewarding_snipes.py  teamwork.py  util.py
patches/: 256x.cpp  256x.h  community_games.cpp  community_games.h  double_costs.cpp  double_costs.h  duplicate_civ_bonuses.cpp  duplicate_civ_bonuses.h  duplicate_techs.cpp  duplicate_techs.h  exploding_kings.cpp  exploding_kings.h  exploding_relic_monks.cpp  exploding_relic_monks.h  exploding_villagers.cpp  exploding_villagers.h  flying_dutchman.cpp  flying_dutchman.h  kidnap.cpp  kidnap.h  matryoshka.cpp  matryoshka.h  multiplied_civ_bonus.cpp  multiplied_civ_bonus.h  no_wall.cpp  no_wall.h  nomadking.cpp  nomadking.h  pocket_horse.cpp  pocket_horse.h  random_costs.cpp  random_costs.h  rewarding_snipes.cpp  rewarding_snipes.h  shared_civ_bonus.cpp  shared_civ_bonus.h  shared_techs.cpp  shared_techs.h  teamwork.cpp  teamwork.h
scripts/: build.sh  buildForDebugger.sh
